manifests/namespaces/istio-system/authorizationpolicy/dashboard-zufardhiyaulhaq-com-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: dashboard-zufardhiyaulhaq-com-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-public-gateway
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: 
        - dashboard.zufardhiyaulhaq.com*
