manifests/namespaces/istio-system/authorizationpolicy/helloworld-grpc-zufardhiyaulhaq-tech-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: helloworld-grpc-zufardhiyaulhaq-tech-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-public-gateway
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: 
        - helloworld-grpc.zufardhiyaulhaq.tech*
