manifests/namespaces/istio-system/authorizationpolicy/helloworld-zufardhiyaulhaq-dev-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: helloworld-zufardhiyaulhaq-dev-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-public-gateway
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: 
        - helloworld.zufardhiyaulhaq.dev*
